--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -1148,7 +1148,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                A fair game of Rock, Paper, Scissors
+                                A game of Rock, Paper, Scissors.
                             </div>
                         </div>
                     </div>
@@ -1164,7 +1164,9 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-
+                                <div class="content">
+                                    Uwuify your profile picture.
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1230,7 +1232,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Check your akira guild
+                                Check your akira guild.
                             </div>
                         </div>
                     </div>
@@ -1246,7 +1248,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                View the money leaderboard for all of Akira
+                                View the money leaderboard for all of Akira.
                             </div>
                         </div>
                     </div>
@@ -1269,7 +1271,7 @@
                     <div class="card card-command">
                         <header class="card-header">
                             <p class="card-header-title">
-                                <code>.top</code>
+                                <code>a.top</code>
                             </p>
                             <div class="card-header-icon">
 
@@ -1278,7 +1280,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                View the money leaderboard the current server
+                                View the money leaderboard in the current server.
                             </div>
                         </div>
                     </div>
@@ -1294,7 +1296,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                A list of your recent transactions
+                                A list of your recent transactions.
                             </div>
                         </div>
                     </div>
@@ -1310,7 +1312,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Workers allow you to increase your daily minerals
+                                Workers allow you to increase your daily minerals.
                             </div>
                         </div>
                     </div>
@@ -1328,7 +1330,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Bet on the roll of a dice
+                                Bet on the roll of a dice.
                             </div>
                         </div>
                     </div>
@@ -1344,7 +1346,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Duel someone to win some minerals
+                                Duel someone to win some minerals.
                             </div>
                         </div>
                     </div>
@@ -1376,7 +1378,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Let's you play a round with the slot machine.
+                                Lets you play a round with the slot machine.
                             </div>
                         </div>
                     </div>
@@ -1394,7 +1396,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                View information about your achievements
+                                View information about your achievements.
                             </div>
                         </div>
                     </div>
