--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -1510,7 +1510,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Mine to improve your mining skill and mine some minerals
+                                Mine to improve your mining skill and mine some minerals.
                             </div>
                         </div>
                     </div>
@@ -1526,7 +1526,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Shows information on all your skills progress
+                                Shows information on all your skills' progress.
                             </div>
                         </div>
                     </div>
