--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -52,7 +52,7 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Set the a channel to be the only channel that allows commands. (defaults to current channel)
+                                        Set a channel to be the only channel that allows commands. (defaults to current channel)
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Akira will stop ignoring a channel. (defaults to current channel)
+                                        Akira will stop ignoring this channel. (defaults to current channel)
                                     </div>
                                 </div>
                             </div>
@@ -165,7 +165,7 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Allows you to blacklist members from using akira.
+                                        Allows you to blacklist members from using Akira.
                                     </div>
                                 </div>
                             </div>
