--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -213,42 +213,42 @@
                                     <tr>
                                         <td>a.perms list</td>
                                         <td></td>
-                                        <td>Lists all available commands you can edit permissions for</td>
+                                        <td>Lists all available commands you can edit permissions for.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms allow</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
-                                        <td>Enable the command in the given target</td>
+                                        <td>Enable the command for the given target.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms deny</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
-                                        <td>Disable the command in the given target</td>
+                                        <td>Disable the command for the given target.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms default</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
-                                        <td>Resets the permission to the default</td>
+                                        <td>Resets the permission to default.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms clear</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
-                                        <td>Clears the permissions for the given extended type</td>
+                                        <td>Clears the permissions for the given extended type.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms show</td>
                                         <td>&lt;group/command&gt;</td>
-                                        <td>Show set permissions for the given extended type</td>
+                                        <td>Show set permissions for the given extended type.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms warn</td>
                                         <td></td>
-                                        <td>Akira will start reacting to commands that are disabled</td>
+                                        <td>Akira will start reacting to commands that are disabled.</td>
                                     </tr>
                                     <tr>
                                         <td>a.perms ignore</td>
                                         <td></td>
-                                        <td>Akira will just ignore commands that are disabled</td>
+                                        <td>Akira will just ignore commands that are disabled.</td>
                                     </tr>
                                 </tbody>
                             </table>
