--- a/akira/policy.html
+++ b/akira/policy.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="../assets/images/Akira.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service | Akira</title>
-    <meta name="description" content="Understand the rules for using Akira on Discord.&#10;Read our TOS for guidelines on bot usage & acceptable behavior.&#10;Get informed now." />
+    <title>Privacy Policy | Akira</title>
+    <meta name="description" content="See what akira collects and how we handle your data.&#10;Read our Policy carefully." />
     <meta name="author" content="Dark-LYNN#6568">
-    <meta name="keywords" content="Terms of Service, Discord, Akira, Usage guidelines, Acceptable behavior, Bot usage, User conduct, Responsibility, Prohibited activities, Liability, Disputes, Termination, Changes to TOS, Contact">
-    <meta property="og:site_name" content="https://dark-lynn.github.io/akira" />
-    <meta property="og:title" content="Terms Of Service - Akira Bot" />
+    <meta name="keywords" content="Privacy Policy, Discord, Akira, Usage guidelines, Acceptable behavior, Bot usage, User conduct, Responsibility, Prohibited activities, Liability, Disputes, Termination, Changes to policy, Contact">
+    <meta property="og:site_name" content="https://akira.lynnux.xyz/" />
+    <meta property="og:title" content="Privacy Policy - Akira Bot" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Understand the rules for using Akira on Discord.&#10;Read our TOS for guidelines on bot usage & acceptable behavior.&#10;Get informed now." />
+    <meta property="og:description" content="See what akira collects and how we handle your data.&#10;Read our Policy carefully." />
     <meta property="og:image" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta property="og:image:secure_url" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta name="theme-color" content="#f47fff">
