--- a/akira/policy.html
+++ b/akira/policy.html
@@ -60,7 +60,7 @@
 
         <h3>Data Storage</h3>
         <p>
-            The information collected by Akira is stored on secure servers located in the Germany. We take appropriate security measures to protect your information against unauthorized access, loss, or disclosure.
+            The information collected by Akira is stored on secure servers located in Germany. We take appropriate security measures to protect your information against unauthorized access, loss, or disclosure.
         </p>
 
         <h3>Data Retention</h3>
@@ -77,13 +77,13 @@
         <h3>Your Rights</h3>
         <p>
             You have the right to access, rectify, and delete your information, as well as the right to limit its processing and to object to its processing. You also have the right to data portability. If you wish to exercise any of these rights, please contact
-            us by using the"akira contact" command or contacting @Dark-LYNN#6568 on discord.
+            us by using the "akira contact" command or contacting @Dark-LYNN#6568 on Discord.
         </p>
 
         <h3>Changes to this Privacy Policy</h3>
         <p>
             We may make changes to this privacy policy from time to time. If we make significant changes, we will notify you through the Discord server where Akira is used or through another appropriate means. By continuing to use Akira, you accept the terms of this
-            privacy policy and any updates.
+            privacy policy and future updates to it.
         </p>
     </main>
     <footer class="footer ">
