--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Any.do external view">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+        <link rel="stylesheet" href="https://cdn.lynnux.xyz/css/styleToDo.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;family=Poppins:wght@700&amp;display=swap" rel="stylesheet">
         <title>Any.do</title>
         <script>
