--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -24,13 +24,10 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         <span class="Board__emoji">
                             <span>🌟</span>
                         </span>
-                        <h1 class="Board__title" title="Feature request">Feature request</h1>
+                        <h1 class="Board__title" title="Feature request">Akira's ToDo list</h1>
                         <div class="Divider"></div>
                         <button class="SyncButton">
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                <path d="M12.5 8H16V4" stroke="#9B9B9B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M13.604 14.243a6.282 6.282 0 01-3.18 1.642 6.416 6.416 0 01-3.59-.342 6.171 6.171 0 01-2.787-2.21A5.855 5.855 0 013 10c0-1.187.364-2.347 1.047-3.333a6.17 6.17 0 012.788-2.21 6.416 6.416 0 013.589-.342 6.283 6.283 0 013.18 1.642L16 8" stroke="#9B9B9B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg>
+                            <a class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
                         </button>
                     </div>
                 </div>
