--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -27,7 +27,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         <h1 class="Board__title" title="Feature request">Akira's ToDo list</h1>
                         <div class="Divider"></div>
                         <button class="SyncButton">
-                            <a class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
+                            <a class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i></a>
                         </button>
                     </div>
                 </div>
