--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -26,7 +26,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </span>
                         <h1 class="Board__title" title="Feature request">Akira's ToDo list</h1>
                         <div class="Divider"></div>
-                            <a class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i></a>
+                            <a style="color:ff4733" class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i></a>
                     </div>
                 </div>
                 <div class="Board__content">
