--- a/akira/terms.html
+++ b/akira/terms.html
@@ -71,6 +71,7 @@
                 <a href="./blog ">Dev notes</a>
                 <a href="./contact ">Contact Us</a>
                 <a href="./staff ">Our Team</a>
+                <a href="./todo">ToDo List</a>
             </div>
             <div class="section-entry ">
                 <h3>Resources</h3>
