--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -1829,6 +1829,7 @@
                 <a href="../blog ">Dev notes</a>
                 <a href="../contact ">Contact Us</a>
                 <a href="../staff ">Our Team</a>
+                <a href="./todo">ToDo List</a>
             </div>
             <div class="section-entry ">
                 <h3>Resources</h3>
