--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -14,8 +14,11 @@
 const _INITIALIZE_LOCATION_SEARCH_=location.search
     </script>
     <link href="/static/css/main.92c167b1.css" rel="stylesheet">
+    <Style>
+        
+    </Style>
 </head>
-    <body>
+    <body style="background-image: url(https://cdn.lynnux.xyz/images/Background.jpg);">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root">
             <div class="Board" style="background-image: url(&quot;/assets/board-background.jpg&quot;);">
