--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -18,7 +18,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
         
     </Style>
 </head>
-    <body style="background-image: url(https://cdn.lynnux.xyz/images/Background.jpg);">
+    <body style="background-image: url(https://cdn.lynnux.xyz/images/Background.jpg); background-repeat: no-repeat; background-attachment: fixed;background-size: cover;">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root">
             <div class="Board" style="background-image: url(&quot;/assets/board-background.jpg&quot;);">
