--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8"><link rel="icon" href="/favicon.ico">
+        <meta charset="utf-8">
+        <link rel="icon" href="../assets/images/Akira.png">
+        <link rel="shortcut icon" href="../assets/images/Akira.png">
+
+        <meta name="description" content="This a list of thinks we are working on or planing to do with akira." />
+        <meta name="author" content="Dark-LYNN">
+        <meta name="keywords" content="akira, Discord Bot, todo">
+        <meta property="og:title" content="ToDo Page - Akira Bot" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="ThThis a list of thinks we are working on or planing to do with akira." />
+        <meta name="theme-color" content="#f47fff">
+        <meta name="msapplication-TileColor" content="#f47fff">
+        <meta content="#f47fff" data-react-helmet="true">    
+
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <meta name="theme-color" content="#000000">
-        <meta name="description" content="Any.do external view">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
         <link rel="stylesheet" href="https://cdn.lynnux.xyz/css/styleToDo.css">
