--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -20,7 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
         <link rel="stylesheet" href="https://cdn.lynnux.xyz/css/styleToDo.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;family=Poppins:wght@700&amp;display=swap" rel="stylesheet">
-        <title>Any.do</title>
+        <title>ToDo List - Akira</title>
         <script>
 const _INITIALIZE_LOCATION_SEARCH_=location.search
     </script>
