--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -50,10 +50,10 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </div>
                         <div class="Section__content">
                             <div class="Card">
-                                <p class="Card__title" title="test">test</p>
+                                <p class="Card__title" title="test">Personal settings</p>
                             </div>
                             <div class="Card">
-                                <p class="Card__title" title="test2">test2</p>
+                                <p class="Card__title" title="test2">Finishing the commands on the <a href="../commands">website</a></p>
                             </div>
                         </div>
                     </div>
