--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -53,7 +53,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                                 <p class="Card__title" title="test">Personal settings.</p>
                             </div>
                             <div class="Card">
-                                <p class="Card__title" title="test2">Finishing all <a href="../commands">commands</a>.</p>
+                                <p class="Card__title" title="test2">Changing akiras's pfp.</p>
                             </div>
                         </div>
                     </div>
@@ -63,7 +63,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </div>
                         <div class="Section__content">
                             <div class="Card">
-                                <p class="Card__title" title="ew">ew</p>
+                                <p class="Card__title" title="test2">Finishing all <a href="../commands">commands</a>.</p>
                             </div>
                         </div>
                     </div>
