--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -55,6 +55,12 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                             <div class="Card">
                                 <p class="Card__title" title="test2">Changing akiras's pfp.</p>
                             </div>
+                            <div class="Card">
+                                <p class="Card__title" title="test2">Adding spotify for VC music.</p>
+                            </div>
+                            <div class="Card">
+                                <p class="Card__title" title="test2">Adding most important commands as slash commands.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="Section">
@@ -73,12 +79,10 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </div>
                         <div class="Section__content">
                             <div class="Card">
-                                <p class="Card__title" title="dwdw">dwdw</p>
+                                <p class="Card__title" title="test2">Updating "Economy".</p>
                             </div>
                             <div class="Card">
-                                <p class="Card__title" title="dw">dw</p>
-                            </div><div class="Card">
-                                <p class="Card__title" title="dwdw">dwdw</p>
+                                <p class="Card__title" title="test2">Posting Extended ModLog in a channel.</p>
                             </div>
                         </div>
                     </div>
@@ -88,19 +92,10 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </div>
                         <div class="Section__content">
                             <div class="Card">
-                                <p class="Card__title" title="wdwdwd">wdwdwd</p>
+                                <p class="Card__title" title="test2">Created <a href="../">Website</a>.</p>
                             </div>
                             <div class="Card">
-                                <p class="Card__title" title="dwsw">dwsw</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="s">s</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="s">s</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="cw">cw</p>
+                                <p class="Card__title" title="test2">Added custom prefix.</p>
                             </div>
                         </div>
                     </div>
@@ -110,19 +105,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </div>
                         <div class="Section__content">
                             <div class="Card">
-                                <p class="Card__title" title="ded">ded</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="de">de</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="c">c</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="de">de</p>
-                            </div>
-                            <div class="Card">
-                                <p class="Card__title" title="de">de</p>
+                                <p class="Card__title" title="ded">Adding youtube music option.</p>
                             </div>
                         </div>
                     </div>
@@ -132,7 +115,7 @@ const _INITIALIZE_LOCATION_SEARCH_=location.search
                         </div>
                         <div class="Section__content">
                             <div class="Card">
-                                <p class="Card__title" title="de">de</p>
+                                <p class="Card__title" title="de">N/A</p>
                             </div>
                         </div>
                     </div>
