--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -10,7 +10,7 @@
         <meta name="keywords" content="akira, Discord Bot, todo">
         <meta property="og:title" content="ToDo Page - Akira Bot" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="ThThis a list of thinks we are working on or planing to do with akira." />
+        <meta property="og:description" content="This a list of thinks we are working on or planing to do with akira." />
         <meta name="theme-color" content="#f47fff">
         <meta name="msapplication-TileColor" content="#f47fff">
         <meta content="#f47fff" data-react-helmet="true">    
