--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -26,9 +26,9 @@
           </figure>
 
           <div class="info-content">
-            <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+            <h1 class="name" title="Richard hanrick">Lynnux</h1>
 
-            <p class="title">Web developer</p>
+            <p class="title">Developer</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
