--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -96,7 +96,7 @@
           <ul class="social-list">
             <li class="social-item">
               <a href="#" class="social-link">
-                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-discord"></ion-icon>
               </a>
             </li>
 
@@ -114,16 +114,9 @@
           </ul>
         </div>
       </aside>
-
-      <!--
-      - #main-content
-    -->
-
+      <!-- #main-content -->
       <div class="main-content">
-        <!--
-        - #NAVBAR
-      -->
-
+        <!-- #NAVBAR -->
         <nav class="navbar">
           <ul class="navbar-list">
             <li class="navbar-item">
@@ -147,11 +140,7 @@
             </li>
           </ul>
         </nav>
-
-        <!--
-        - #ABOUT
-      -->
-
+        <!-- #ABOUT -->
         <article class="about active" data-page="about">
           <header>
             <h2 class="h2 article-title">About me</h2>
@@ -159,18 +148,14 @@
 
           <section class="about-text">
             <p>
-              I'm Creative Director and UI/UX Designer from Sydney, Australia,
-              working in web development and print media. I enjoy turning
-              complex problems into simple, beautiful and intuitive designs.
+              Hi there!
+              I'm a passionate Discord bot developer and website developer with experience in various programming languages such as Python, JavaScript, and HTML/CSS.
+              I love creating new projects and bringing ideas to life through code.
             </p>
-
             <p>
-              My job is to build your website so that it is functional and
-              user-friendly but at the same time attractive. Moreover, I add
-              personal touch to your product and make sure that is eye-catching
-              and easy to use. My aim is to bring across your message and
-              identity in the most creative way. I created web design for many
-              famous brand companies.
+              I'm constantly learning and exploring new technologies to improve my skills and provide better solutions for my clients.
+              I believe that good communication and attention to detail are essential in creating successful projects.
+              Let's work together to create something amazing!
             </p>
           </section>
 
