--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -157,18 +157,18 @@
                   <p class="service-item-text">Development of websites with average quality at an amateur level.</p>
                 </div>
               </li>
-          <!--<li class="service-item">
+              <li class="service-item">
                 <div class="service-icon-box">
                   <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40"/>
                 </div>
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Mobile apps</h4> 
+                  <h4 class="h4 service-item-title">Discord Bots</h4> 
                   <p class="service-item-text">
                     Professional development of applications for iOS and
                     Android.
                   </p>
                 </div> 
-              </li> -->
+              </li>
             </ul>
           </section>
           <!-- testimonials -->
