--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -163,10 +163,7 @@
                 </div>
                 <div class="service-content-box">
                   <h4 class="h4 service-item-title">Discord Bots</h4> 
-                  <p class="service-item-text">
-                    Professional development of applications for iOS and
-                    Android.
-                  </p>
+                  <p class="service-item-text">Development of discord bots with average quality at an amateur level.</p>
                 </div> 
               </li>
             </ul>
