--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -76,7 +76,7 @@
           <ul class="social-list">
             <li class="social-item">
               <a href="https://discord.com/users/796295242000498738" class="social-link">
-                <ion-icon name="logo-discord"></ion-icon>
+                <ion-icon name="discord"></ion-icon>
               </a>
             </li>
       <!--  <li class="social-item">
@@ -244,23 +244,9 @@
             </div>
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">University school of the arts</h4>
-                <span>2007 — 2008</span>
-                <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
-                </p>
-              </li>
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">New york academy of art</h4>
-                <span>2006 — 2007</span>
-                <p class="timeline-text">Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est omnis..</p>
-              </li>
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">High school of art and design</h4>
-                <span>2002 — 2004</span>
-                <p class="timeline-text">Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur magni dolores eos.</p>
+                <h4 class="h4 timeline-item-title">Self-Educated develper</h4>
+                <span>2019 — Present</span>
+                <p class="timeline-text">I have used online resources such as tutorials, coding communities, and personal projects to learn the skills I need for my projects.</p>
               </li>
             </ol>
           </section>
@@ -273,37 +259,9 @@
             </div>
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Creative director</h4>
-                <span>2015 — Present</span>
-                <p class="timeline-text">
-                  Nemo enim ipsam voluptatem blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et qvuas molestias
-                  exceptur.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Art director</h4>
-
-                <span>2013 — 2015</span>
-
-                <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Web designer</h4>
-
-                <span>2010 — 2013</span>
-
-                <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
-                </p>
+                <h4 class="h4 timeline-item-title">No development experience</h4>
+                <span>2019 — Present</span>
+                <p class="timeline-text">I personaly don't really have any experience developing.</p>
               </li>
             </ol>
           </section>
@@ -315,65 +273,43 @@
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Web design</h5>
-                  <data value="80">80%</data>
+                  <data value="80">20%</data>
                 </div>
-
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
+                  <div class="skill-progress-fill" style="width: 20%"></div>
                 </div>
               </li>
-
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Graphic design</h5>
-                  <data value="70">70%</data>
+                  <data value="70">5%</data>
                 </div>
-
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%"></div>
+                  <div class="skill-progress-fill" style="width: 5%"></div>
                 </div>
               </li>
-
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Branding</h5>
-                  <data value="90">90%</data>
+                  <h5 class="h5">Discord Bot Development</h5>
+                  <data value="90">15%</data>
                 </div>
-
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%"></div>
-                </div>
-              </li>
-
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">WordPress</h5>
-                  <data value="50">50%</data>
-                </div>
-
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
+                  <div class="skill-progress-fill" style="width: 15%"></div>
                 </div>
               </li>
             </ul>
           </section>
         </article>
-
-        <!--
-        - #PORTFOLIO
-      -->
-
+        <!-- #PORTFOLIO -->
         <article class="portfolio" data-page="portfolio">
           <header>
             <h2 class="h2 article-title">Portfolio</h2>
           </header>
-
           <section class="projects">
             <ul class="filter-list">
               <li class="filter-item">
                 <button class="active" data-filter-btn>All</button>
               </li>
-
               <li class="filter-item">
                 <button data-filter-btn>Web design</button>
               </li>
