--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -313,95 +313,60 @@
               <li class="filter-item">
                 <button data-filter-btn>Web design</button>
               </li>
-
               <li class="filter-item">
                 <button data-filter-btn>Applications</button>
               </li>
-
               <li class="filter-item">
                 <button data-filter-btn>Web development</button>
               </li>
             </ul>
-
             <div class="filter-select-box">
               <button class="filter-select" data-select>
-                <div class="select-value" data-selecct-value>
-                  Select category
-                </div>
-
+                <div class="select-value" data-selecct-value>Select category</div>
                 <div class="select-icon">
                   <ion-icon name="chevron-down"></ion-icon>
                 </div>
               </button>
-
               <ul class="select-list">
                 <li class="select-item">
                   <button data-select-item>All</button>
                 </li>
-
                 <li class="select-item">
                   <button data-select-item>Web design</button>
                 </li>
-
                 <li class="select-item">
-                  <button data-select-item>Applications</button>
+                  <button data-select-item>Web development</button>
                 </li>
-
                 <li class="select-item">
                   <button data-select-item>Web development</button>
                 </li>
               </ul>
             </div>
-
             <ul class="project-list">
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
+              <li class="project-item active" data-filter-item data-category="bot development">
                 <a href="#">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-
-                    <img
-                      src="./assets/images/project-1.jpg"
-                      alt="finance"
-                      loading="lazy"
-                    />
+                    <img src="./assets/images/project-1.jpg" alt="Akira" loading="lazy"/>
                   </figure>
-
-                  <h3 class="project-title">Finance</h3>
-
-                  <p class="project-category">Web development</p>
+                  <h3 class="project-title">Akira</h3>
+                  <p class="project-category">Discord Bot Development</p>
                 </a>
               </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a href="#">
+              <li class="project-item active" data-filter-item data-category="web development">
+                <a href="https://akira.lynnux.xyz">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-
-                    <img
-                      src="./assets/images/project-2.png"
-                      alt="orizon"
-                      loading="lazy"
-                    />
+                    <img src="./assets/images/project-2.png" alt="orizon" loading="lazy"/>
                   </figure>
-
-                  <h3 class="project-title">Orizon</h3>
-
+                  <h3 class="project-title">Akira</h3>
                   <p class="project-category">Web development</p>
                 </a>
               </li>
-
               <li
                 class="project-item active"
                 data-filter-item
