--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -361,7 +361,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/project-2.png" alt="orizon" loading="lazy"/>
+                    <img src="./assets/images/project-2.jpg" alt="orizon" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Akira</h3>
                   <p class="project-category">Web development</p>
