--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -344,7 +344,7 @@
             </div>
             <ul class="project-list">
               <li class="project-item active" data-filter-item data-category="bot development">
-                <a href="#">
+                <a href="https://discord.com/application-directory/738057910923296839">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
