--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -314,7 +314,7 @@
                 <button data-filter-btn>Web design</button>
               </li>
               <li class="filter-item">
-                <button data-filter-btn>Applications</button>
+                <button data-filter-btn>Graphic design</button>
               </li>
               <li class="filter-item">
                 <button data-filter-btn>Web development</button>
@@ -335,7 +335,7 @@
                   <button data-select-item>Web design</button>
                 </li>
                 <li class="select-item">
-                  <button data-select-item>Web development</button>
+                  <button data-select-item>Graphic design</button>
                 </li>
                 <li class="select-item">
                   <button data-select-item>Web development</button>
