--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -281,16 +281,16 @@
               </li>
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Graphic design</h5>
-                  <data value="70">5%</data>
+                  <h5 class="h5">Web development</h5>
+                  <data value="70">17%</data>
                 </div>
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 5%"></div>
+                  <div class="skill-progress-fill" style="width: 17%"></div>
                 </div>
               </li>
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Discord Bot Development</h5>
+                  <h5 class="h5">Bot Development</h5>
                   <data value="90">15%</data>
                 </div>
                 <div class="skill-progress-bg">
@@ -314,7 +314,7 @@
                 <button data-filter-btn>Web design</button>
               </li>
               <li class="filter-item">
-                <button data-filter-btn>Graphic design</button>
+                <button data-filter-btn>Bot Development</button>
               </li>
               <li class="filter-item">
                 <button data-filter-btn>Web development</button>
@@ -335,7 +335,7 @@
                   <button data-select-item>Web design</button>
                 </li>
                 <li class="select-item">
-                  <button data-select-item>Graphic design</button>
+                  <button data-select-item>Bot Development</button>
                 </li>
                 <li class="select-item">
                   <button data-select-item>Web development</button>
@@ -343,7 +343,7 @@
               </ul>
             </div>
             <ul class="project-list">
-              <li class="project-item active" data-filter-item data-category="bot development">
+              <li class="project-item active" data-filter-item data-category="Bot Development">
                 <a href="https://discord.com/application-directory/738057910923296839">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
