--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -343,7 +343,7 @@
               </ul>
             </div>
             <ul class="project-list">
-              <li class="project-item active" data-filter-item data-category="Bot Development">
+              <li class="project-item active" data-filter-item data-category="applications">
                 <a href="https://discord.com/application-directory/738057910923296839">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
@@ -376,7 +376,7 @@
           </header>
           <section class="blog-posts">
             <ul class="blog-posts-list">
-              <li class="blog-post-item">
+          <!--    <li class="blog-post-item">
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy"/>
@@ -391,7 +391,7 @@
                     <p class="blog-text">Veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
                   </div>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </section>
         </article>
