--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -396,7 +396,7 @@
           </section>
         </article>
         <!-- #CONTACT -->
-        <article class="contact" data-page="contact">
+      <!--  <article class="contact" data-page="contact">
           <header>
             <h2 class="h2 article-title">Contact</h2>
           </header>
@@ -414,7 +414,7 @@
               </button>
             </form>
           </section>
-        </article>
+        </article> -->
       </div>
     </main>
     <script src="./assets/js/script.js"></script>
