--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -75,7 +75,7 @@
               </div>
               <div class="contact-info">
                 <p class="contact-title">Location</p>
-                <address>Antwerpen, Brussel</address>
+                <address>Antwerpen, Belgium</address>
               </div>
             </li>
           </ul>
