--- a/akira/policy.html
+++ b/akira/policy.html
@@ -31,7 +31,7 @@
                 <div class="navbar-end ">
                     <a class="navbar-item " href="../ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
                     <a class="navbar-item " href="../commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
-                    <a class="navbar-item " href="https://docs.lynnux.xyz/"><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
+                    <a class="navbar-item " href="https://documentation.lynnux.xyz/"><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
                     <a class="navbar-item " href="../permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
                     <a class="navbar-item " href="../support " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
                     <a class="navbar-item last-item " href="../invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
