--- a/sites/lynnux/project/1112395712806793228/terms.html
+++ b/sites/lynnux/project/1112395712806793228/terms.html
@@ -26,20 +26,20 @@ Get informed now.">
     </header>
     <main class="main">
         <h3 style="background-color: transparent;">Introduction</h3>
-        <p style="background-color: transparent;">By using Akira, you agree to the following terms of service. These terms govern your use of the bot and any services we may offer through it.</p>
+        <p style="background-color: transparent;">By using this custom bot, you agree to the following terms of service. These terms govern your use of the bot and any services we may offer through it.</p>
         <h3>Use of the Bot</h3>
-        <p>Akira is intended for personal and non-commercial use. You may not use the bot for any illegal or unauthorized purpose. We reserve the right to terminate your use of the bot at any time if you violate these terms.</p>
+        <p>This "mikayla campinos" bot is intended for personal use. You may not use the bot for any illegal or unauthorized purpose. We reserve the right to terminate your use of the bot at any time if you violate these terms.</p>
         <h3>User-Generated Content</h3>
-        <p>By using the Discord Bot, you may provide us with content such as messages, comments, and other materials. You grant us a non-exclusive, transferable, sub-licensable, royalty-free, worldwide license to use any content you provide through the bot.</p>
+        <p>By using "mikayla campinos" {the bot}, you may provide us with content such as messages, comments, and other materials. You grant us a non-exclusive, transferable, sub-licensable, royalty-free, worldwide license to use any content you provide through the bot.</p>
         <h3>Modification of the Bot and these Terms</h3>
-        <p>We reserve the right to modify Akira or these terms of service at any time. Your continued use of the bot after any changes indicates your acceptance of the new terms. It is your responsibility to regularly check these terms for any updates.
+        <p>We reserve the right to modify "mikayla campinos" {the bot} or these terms of service at any time. Your continued use of the bot after any changes indicates your acceptance of the new terms. It is your responsibility to regularly check these terms for any updates.
         </p>
         <h3>Disclaimer of Warranties</h3>
-        <p>The Discord Bot is provided on an "as is" and "as available" basis. We make no representations or warranties of any kind, expressed or implied, as to the operation of the bot or the information, content, materials, or products included on the bot.</p>
+        <p>"Mikayla Campinos" {the bot} is provided on an "as is" and "as available" basis. We make no representations or warranties of any kind, expressed or implied, as to the operation of the bot or the information, content, materials, or products included on the bot.</p>
         <h3>Limitation of Liability</h3>
         <p>In no event shall we be liable for any damages arising from the use of the Discord Bot. This includes, but is not limited to, indirect, incidental, special, punitive, and consequential damages.</p>
         <h3>Contact Us</h3>
-        <p>If you have any questions about these terms of service, please contact us by using the "akira contact" command or contacting @Dark-LYNN#6568 on Discord.</p>
+        <p>If you have any questions about these terms of service, please contact us by using the "!contact" command or contacting @Dark-LYNN#6568 on Discord.</p>
     </main>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js "></script>
