--- a/sites/lynnux/project/1112395712806793228/policy.html
+++ b/sites/lynnux/project/1112395712806793228/policy.html
@@ -1,4 +1,22 @@
-<html>
+<html><head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./assets/images/image_2023-05-30_140923665.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy | Private Bot - mikayla campinos</title>
+    <meta name="description" content="See what we collects and how we handle your data.
+Read our Policy carefully.">
+    <meta name="author" content="Dark-LYNN#6568">
+    <meta name="keywords" content="Privacy Policy, Discord, Akira, Usage guidelines, Acceptable behavior, Bot usage, User conduct, Responsibility, Prohibited activities, Liability, Disputes, Termination, Changes to policy, Contact">
+    <meta property="og:site_name" content="https://lynnux.xyz/project/1112395712806793228/terms/">
+    <meta property="og:title" content="Privacy Policy - mikayla campinos (bot)">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="See what we collects and how we handle your data.
+Read our Policy carefully.">
+    <meta property="og:image" content="./assets/images/image_2023-05-30_140923665.png">
+    <meta property="og:image:secure_url" content="./assets/images/image_2023-05-30_140923665.png">
+    <meta name="theme-color" content="#f47fff">
+    <link rel="stylesheet" href="https://akira.lynnux.xyz/assets/css/styles.css">
+    </head>
   <body>    
     <main class="main">
         <h3>Introduction</h3>
